[package]
name = "conquer-reclaim"
description = "generic interface for lock-free memory reclamation"
version = "0.4.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/conquer-reclaim.git"
documentation = "https://docs.rs/conquer-reclaim"
keywords = ["concurrent", "lock-free", "memory", "reclamation"]
edition = "2018"
exclude = ["/.travis.yml"]

[features]
default = ["std"]

# must be disabled for use in no_std crates
std = []

[dependencies]
cfg-if = "0.1.10"

[dependencies.conquer-pointer]
git = "https://github.com/oliver-giersch/conquer-pointer"
default-features = false

[dev-dependencies.conquer-util]
git = "https://github.com/oliver-giersch/conquer-util"
features = ["align"]
