[package]
name = "conquer-reclaim"
description = "abstract generic interface for lock-free memory reclamation"
version = "0.4.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/conquer-reclaim.git"
documentation = "https://docs.rs/conquer-reclaim"
keywords = ["concurrent", "lock-free", "memory", "reclamation"]
edition = "2018"
exclude = []

[features]
default = ["std"]

# exports some basic lock-free data structures implemented generically
examples = ["conquer-util/align"]
# adds debug capabilities to the data structures enabled by "examples"
examples-debug = ["examples"]
# additional features requiring a nightly compiler
nightly = []

# must be disabled for use in no_std crates
std = []

[dependencies]
cfg-if = "0.1.10"

[dependencies.conquer-pointer]
git = "https://github.com/oliver-giersch/conquer-pointer"

[dependencies.conquer-util]
git = "https://github.com/oliver-giersch/conquer-util"
features = ["align"]
optional = true
